# yttrium3

./: Doxyfile  README.md  temporary.hpp
src/: CMakeLists.txt
src/chem/: CMakeLists.txt
src/chem/tests/: CMakeLists.txt  main.cpp  test-aftermath.cpp  test-cluster.cpp  test-db.cpp  test-weasel.cpp
src/chem/y/chemical/: formula.cpp  formula.hpp  library.cpp  library.hpp  slist.hpp  species.cpp  species.hpp  weasel.cpp  weasel.hpp
src/cli/: CMakeLists.txt  y_trunc.cpp  y_xctest.cpp
src/fltk/: CMakeLists.txt
src/fltk/tests/: CMakeLists.txt  canvas.fl  main.cpp  matte.fl  test-canvas.cpp  test-matte.cpp
src/fltk/y/fltk/: axis.cpp  axis.hpp  canvas.cpp  canvas.hpp  curve.cpp  curve.hpp  gel_tabs.cpp  gel_tabs.hpp  matte_button.cpp  matte_button.hpp
src/ink/: CMakeLists.txt
src/ink/tests/: CMakeLists.txt  main.cpp  test-bitmap.cpp  test-broker.cpp  test-hist.cpp  test-pixmap.cpp
src/ink/y/ink/: area.cpp  area.hpp  bitmap.cpp  bitmap.hpp  broker.cpp  broker.hpp  histogram.cpp  histogram.hpp  pixmap.hpp  zero-flux.cpp  zero-flux.hpp
src/lua++/: CMakeLists.txt
src/lua++/tests/: CMakeLists.txt  main.cpp  sample.lua  test-function.cpp  test-state.cpp
src/lua++/y/lua++/: function.cpp  function.hpp  state.cpp  state.hpp
src/mkl/: CMakeLists.txt
src/mkl/tests/: CMakeLists.txt  main.cpp  test-chem.cpp
src/mkl/tests/algebra/: adjoint.cpp  cyclic.cpp  lu.cpp  mmul.cpp  ortho-space.cpp  rank.cpp  svd.cpp  tridiag.cpp  xgj.cpp
src/mkl/tests/minimize/: api.cpp  parabolic.cpp
src/mkl/tests/root/: zroot.cpp
src/mkl/y/mkl/: function-wrapper-1d.hpp  function-wrapper-nd.hpp  function.hpp  interval.cpp  interval.hpp  intervals.hpp  limit.cpp  limit.hpp
src/python/: CMakeLists.txt  spyndle.cpp  spyndle.py
src/root/: CMakeLists.txt
src/root/tests/: CMakeLists.txt  cmodule.c  cxxmod.cpp  main.cpp  test-drifter.cpp  test-exception.cpp  test-functor.cpp  test-graphviz.cpp  test-light-object.cpp  test-object.cpp  test-platform.cpp  test-rtld.cpp  test-xml.cpp
src/root/tests/apex/: apex_ksd.cpp  frontier.cpp  in-threads.cpp  k-dft-mul.cpp  k-dft-sqr.cpp  k-dft.cpp  k-gcd.cpp  k-sd.cpp  k.cpp  k_bits.cpp  k_gcd.cpp  keg.cpp  keg_bits.cpp  n.cpp  n64.cpp  n_red.cpp  overseer.cpp  perf.cpp  perf2.cpp  q.cpp  rsa.cpp  scatter.cpp  z.cpp
src/root/tests/ascii/: base64.cpp  conv-apn.cpp  conv-apz.cpp  conv-flt.cpp  conv-i64.cpp  conv-u64.cpp  convert.cpp
src/root/tests/calculus/: align.cpp  base2.cpp  check-ceil-log2.hxx  gc.cpp  gcd.cpp  integer-log2.cpp  isqrt.cpp  ldiv.cpp  meta2.cpp  nzbits.cpp  primes.cpp  required.cpp  split.cpp
src/root/tests/cameo/: add-ap-proxy.cpp  add-fp-queue.cpp  add-scalar.cpp  add-straight.cpp  addenda.cpp  addition.cpp  multiplication.cpp  product-direct.cpp  product-queued.cpp  product-raised.cpp  scal-sum.cpp  static-geqz-sum.cpp  sum-direct.cpp  sum-queued.cpp  sum-raised.cpp  sum-scalar.cpp  sum-static-queued.cpp  sum-vectorial.cpp  sum3.cpp
src/root/tests/concurrent/: condition.cpp  fake-lock.cpp  life-time.cpp  member.cpp  memory.cpp  mutex.cpp  nucleus.cpp  primes.cpp  ram.cpp  simd.cpp  split1d.cpp  split2d.cpp  thread.cpp  threaded.cpp  udt.cpp  updiag.cpp
src/root/tests/config/: compiler.cpp  platform.cpp
src/root/tests/container/: book.cpp  contiguous-ro.cpp  contiguous-rw.cpp  contiguous.cpp  cxx-array.cpp  cxx-series.cpp  hash-map.cpp  hash-set.cpp  iter.cpp  lexicon.cpp  list.cpp  matrix.cpp  pq.cpp  suffix-map.cpp  suffix-set.cpp  vector.cpp
src/root/tests/core/: display.cpp  hindx.cpp  hsort.cpp  htable.cpp  list.cpp  pool-and-list.cpp  pool.cpp  rand.cpp  tree.cpp
src/root/tests/counting/: comb.cpp  part.cpp  perm.cpp
src/root/tests/coven/: chem.cpp  colinear.cpp  compress.cpp  family.cpp  inquiry.cpp  tribes.cpp  univocal.cpp  vcache.cpp  vector.cpp
src/root/tests/dft/: mul.cpp
src/root/tests/field/: 1d.cpp  2d.cpp  3d.cpp  4d.cpp  layouts.cpp
src/root/tests/handy/: basic-heavy-list.cpp  basic-light-list.cpp  caches.cpp  joint-heavy-list.cpp  joint-light-list.cpp  joint-set.cpp  lists.cpp  plain-heavy-list.cpp  plain-light-list.cpp
src/root/tests/hashing/: key-dumper.cpp  scatter.cpp  tests.cpp
src/root/tests/info/: bwt.cpp  sc.cpp  xbwt.cpp
src/root/tests/jive/: eval.cpp  formula.cpp  grammar.cpp  json.cpp  leading.cpp  lexer.cpp  pattern.cpp  posix.cpp  rx.cpp  scanner.cpp  source.cpp  vfs.cpp  weasel.cpp  xnode.cpp
src/root/tests/libc/: file-copy.cpp  ifile.cpp  ofile.cpp  sort.cpp  strfmt.cpp
src/root/tests/memory/: allocator.cpp  archon.cpp  auto-built.cpp  book.cpp  buffer.cpp  embed.cpp  moniker.cpp  pages.cpp  supply.cpp  troop.cpp
src/root/tests/mkl/: api.cpp  numeric.cpp  stats.cpp
src/root/tests/pointer/: auto.cpp  easy.cpp
src/root/tests/random/: seed64.cpp  type-gen.cpp  uniform32.cpp
src/root/tests/stream/: bz2-in.cpp  gz-in.cpp  gz-out.cpp  identifiers.cpp  input-file.cpp  input-proc.cpp  io64.cpp  output-file.cpp  serialize.cpp  u64.cpp
src/root/tests/string/: format.cpp  in-threads.cpp  stride.cpp  string.cpp
src/root/tests/system/: error.cpp  exception.cpp  hw.cpp  pid.cpp  wall-time.cpp
src/root/tests/threading/: global-multi-threaded.cpp  multi-threaded-handle.cpp  multi-threaded-object.cpp  single-threaded-class.cpp
src/root/tests/type/: ints.cpp
src/root/tests/vfs/: scan.cpp
src/root/y/: bcopy.hpp  container.cpp  container.hpp  derived.cpp  derived.hpp  exception.cpp  exception.hpp  functor.hpp  hide.cpp  hide.hpp  int-to-type.hpp  object.cpp  object.hpp  ostream-proto.hpp  singleton.hpp  string.hpp  swap.hpp  type-to-type.hpp
src/root/y/ability/: auto-locking.hpp  caching.cpp  caching.hpp  collectable.cpp  collectable.hpp  counted.cpp  counted.hpp  dynamic.hpp  expandable.hpp  freezable.cpp  freezable.hpp  identifiable.cpp  identifiable.hpp  (+15 more)
src/y/: CMakeLists.txt
src/y/bzip2/: CMakeLists.txt  bzlib.c
src/y/jbig/: CMakeLists.txt  jbig.c  jbig_ar.c
src/y/jpeg/: CMakeLists.txt
src/y/lua/: CMakeLists.txt
src/y/png/: CMakeLists.txt  pngpriv.h
src/y/tiff/: CMakeLists.txt  RELEASE-DATE
src/y/zlib/: CMakeLists.txt  gzread.c  gzwrite.c
(+1207 files in other folders)
