project(y)

include_directories(.)

Y_CreateLibrary(y
y
y/config
y/check
y/libc
y/libc/block
y/libc/str
y/libc/file
y/xml
y/core
y/core/pool
y/core/list
y/random
y/system
y/system/wall-time
y/ascii
y/ascii/base64
y/ascii/convert
y/format
y/concurrent
y/concurrent/nucleus
y/concurrent/sys
y/concurrent/singleton
y/concurrent/windows
y/concurrent/splitting
y/concurrent/api
y/concurrent/api/simd
y/threading
y/calculus
y/calculus/prime
y/type
y/memory
y/memory/type
y/memory/small
y/memory/small/arena
y/memory/page
y/memory/plastic
y/memory/plastic/forge
y/memory/allocator
y/memory/buffer
y/memory/troop
y/ability
y/container
y/container/iter
y/container/contiguous
y/container/cxx
y/container/sequence
y/container/algorithm
y/pointer
y/utest
y/stream
y/stream/io
y/stream/libc
y/object
y/object/light
y/string
y/mkl
y/apex
y/apex/k
y/apex/n
y/apex/z
y/apex/q
y/coven
y/coven/univocal
y/counting
y/counting/c
)

add_subdirectory(tests)
Y_Regression(root)

